# opb-utils

./: .env.auto.example  .env.tui.example  .gitignore  README.md  TUI.md  constants.py  create_issues.py  git-commit-review.sh  git-pr-first.sh  git-pr-fix-manual.sh  git-pr-fix.sh  git-pr-ready-manual.sh  git-pr-ready.sh  git-pr.sh  gpt.py  issues-to-questions.py  issues_to_questions.py  q11_multi-part.md  requirements.txt  saved-example.json  test.json  test.sh  test2.py  tui-notes.md  tui.py  utils.py  write_md.py
tui/: README.md  __main__.py  generate_questions.py  gpt.py  pyproject.toml  requirements.txt  similarity.py  tui.py  utils.py  write_md.py
tui/src/tui/: gpt.py  main.py  question.md.template  tui.py  utils.py  write_md.py
