[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "OPB-tui"
version = "0.1.0"
description = "Beta version of Christina Yang's (https://github.com/yangchristina) TUI for creating templates for OPB-style markdown problems that can be converted to PrairieLearn questions."
authors = [{name = "yangchristina"}]
dependencies = [
    "nltk>=3.8.1",
    "openai>=1.34.0",
    "pandas>=2.2.2",
    "pdf2image>=1.17.0",
    "problem-bank-scripts>=0.11.1",
    "python-dotenv>=1.0.1",
    "questionary>=2.0.1",
    "scikit-learn>=1.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
create_question = "tui.main:main"

[tool.pdm]
ignore_package_warnings = ["problem-bank-*"]

[tool.pdm.resolution.overrides]
problem-bank-scripts = ">=0.11.1"
problem-bank-helpers = ">=0.2.7"